# XML-Parser

./: .travis.yml  CMakeLists.txt  Data.hpp  Parser.cpp  Parser.hpp  README.md  Result.hpp  example.xml  main.cpp  makefile
.github/workflows/: .travis.yml
include/: Attribute.hpp  Data.hpp  IResult.hpp  MultiLineAccumulator.hpp  MultiLineElement.hpp  ParseTree.hpp  ParseTreeResult.hpp  Parser.hpp  TagInterpreter.hpp  VResult.hpp  XmlClosingElement.hpp  XmlClosingElementInterpreter.hpp  XmlCommentElementInterpreter.hpp  XmlElementContents.hpp  XmlElementContentsInterpreter.hpp  XmlElementInterpreter.hpp  XmlEmptyElement.hpp  XmlEmptyElementInterpreter.hpp  XmlLine.hpp  XmlMultiLineElementInterpreter.hpp  XmlOpeningElement.hpp  XmlOpeningElementInterpreter.hpp  XmlValidation.hpp
src/: CMakeLists.txt  MultiLineAccumulator.cpp  Parser.cpp  Result.cpp  TagInterpreter.cpp  VResult.cpp  XmlClosingElement.cpp  XmlClosingElementInterpreter.cpp  XmlCommentElementInterpreter.cpp  XmlElementContents.cpp  XmlElementContentsInterpreter.cpp  XmlElementInterpreter.cpp  XmlEmptyElement.cpp  XmlEmptyElementInterpreter.cpp  XmlMultiLineElementInterpreter.cpp  XmlOpeningElement.cpp  XmlOpeningElementInterpreter.cpp  main.cpp  makefile
tests/: CMakeLists.txt  main.cpp  makefile
xml_files/: example.xml
